--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "tap": "~0.4.4",
-    "redis": ">=0.10.2 <2.6.0",
+    "redis": ">=0.10.2 <=2.6.0",
     "continuation-local-storage": "^3.0.0"
   },
   "dependencies": {
